CKD/yaml-files/pod-definition-taint.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: bee
  name: bee
spec:
  containers:
  - env:
    - name: spray
      value: mortein
    image: nginx
    name: bee
  tolerations:
  - effect: NoSchedule
    key: "spray"
    value: "mortein"
    operator: Equal
