CKD/yaml-files/pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: default
  labels:
    app: myapp
    type: front-end
    
spec:
  containers:
    - envFrom:
      - configMapRef:
        name: config-map-name
      name: nginx-container
      image: nginx
