CKD/yaml-files/pod-definition01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-sleeper-pod
spec:
  containers:
  - name: ubuntu-sleeper
    image: ubuntu-sleper
    command: ["sleep2.0"]
    args: ["10"]
  serviceAccount: dashboard-sa
