CKD/yaml-files/service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector: #no selector do service coloco as labels do Pod
    app: myapp
  type: NodePort  #NodePort - ClusterIP - LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 8080
